Working initial Express server environment

--- a/views/video.pug
+++ b/views/video.pug
@@ -1,4 +1,5 @@
 extends layout
 
-video(width="640" height="480" controls)
+block content 
+  video(width="640" height="480" controls)
     Your browser does not support the video tag!
