Some clean-up to fit streaming template into existing project

--- a/views/video.pug
+++ b/views/video.pug
@@ -2,5 +2,5 @@ extends layout
 
 block content 
   video(width="640" height="480" controls)
-    source(src="/video/test.mkv" type="video/mkv")
+    source(src="/video/sample.mkv" type="video/mkv")
     Your browser does not support the video tag!
