--- a/views/video.pug
+++ b/views/video.pug
@@ -1,5 +1,8 @@
 extends layout
 
+block scripts
+  script(src="/video.bundle.js")
+
 block content 
   video(width="640" height="480" controls)
     source(src="http://localhost:8080/video")
