Added Three.js rendering example

--- a/views/video.pug
+++ b/views/video.pug
@@ -4,6 +4,6 @@ block scripts
   script(src="/video.bundle.js")
 
 block content 
-  video(width="640" height="480" controls)
+  video#video(width="640" height="480" controls)
     source(src="http://localhost:8080/video")
     Your browser does not support the video tag!
